--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -3,7 +3,7 @@
   <div class="w-5/6 max-w-[1200px] mx-auto mb-8 flex flex-col gap-4 md:flex-row md:justify-between">
     <div class=" border border-primary-color rounded-lg grid items-center px-4 py-0 h-12">
       {{#if user}}
-      <h4>Bienvenido, {{ user.first_name }}</h4>
+      <h4>Bienvenido/a, {{ user.first_name }}</h4>
       {{/if}}
     </div>
     <form action="/products/category" method="post" class="flex justify-center md:justify-end gap-2 ">
